--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-mobilealerts",
   "version": "0.0.2",
-  "description": "Provides HomKit Access to MobileAlerts devices.",
+  "description": "This is a homebridge plugin for several Mobile-Alerts (Technoline) devices.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git://github.com/dehsgr/homebridge-mobilealrts.git"
+    "url": "git://github.com/dehsgr/homebridge-mobilealerts.git"
   },
   "dependencies": {
     "request": "^2.67.0"
