Implemented some fixes and enhancements
~ introducing new logging switches (see sample-config.json for details).
~ small fix to RegEx reflecting leak detection on MA10350.
~ small correction to README.md file.

--- a/sample-config.json
+++ b/sample-config.json
@@ -12,7 +12,11 @@
         {
             "platform": "MobileAlerts",
             "name": "MobileAlerts",
-            "iphoneid": "012345678910"
+            "iphoneid": "012345678910",
+            "log": {
+                "verbose": false,
+                "HTML": false
+            }
         }
     ],
 
