added param "pollingInterval"
added Configparameter "pollingInterval", course Mobile Alert standard sensors r updating only every 7min

--- a/sample-config.json
+++ b/sample-config.json
@@ -13,9 +13,11 @@
             "platform": "MobileAlerts",
             "name": "MobileAlerts",
             "iphoneid": "012345678910",
+            "pollingInterval": 420,
             "log": {
                 "verbose": false,
                 "HTML": false
+
             }
         }
     ],
