oops, lower case now

--- a/sample-config.json
+++ b/sample-config.json
@@ -13,7 +13,7 @@
             "platform": "MobileAlerts",
             "name": "MobileAlerts",
             "iphoneid": "012345678910",
-            "pollingInterval": 420,
+            "pollinginterval": 420,
             "log": {
                 "verbose": false,
                 "HTML": false
