--- a/sample-config.json
+++ b/sample-config.json
@@ -17,7 +17,8 @@
             "log": {
                 "verbose": false,
                 "HTML": false
-            }
+            },
+            "reset": false
         }
     ],
 
