Implemented accessory filter
See issue #26.

Additionally this is a preparation for eventually using direct API access to mobile alerts systems without needing to poll measurements website.

--- a/sample-config.json
+++ b/sample-config.json
@@ -13,12 +13,17 @@
 			"platform": "MobileAlerts",
 			"name": "MobileAlerts",
 			"iphoneid": "012345678910",
+			"devices": [
+				"0123456789ABCDEF",
+				"1234567890ABCDEF",
+				"2345678901ABCDEF"
+			],
 			"pollinginterval": 420,
 			"log": {
 				"verbose": false,
 				"HTML": false
 			},
-      "reset": false
+      		"reset": false
 		}
 	],
 
